--- a/src/app/control-button-shelf/control-button-shelf.component.html
+++ b/src/app/control-button-shelf/control-button-shelf.component.html
@@ -1,4 +1,3 @@
-<div class="d-flex flex-row container justify-content-center flex-wrap">
-  <app-start-button></app-start-button>
-  <app-reset-button></app-reset-button>
+<div class="d-flex mt-1 flex-row container justify-content-center flex-wrap">
+  <ng-content></ng-content>
 </div>
