--- a/src/app/time-display/time-display.component.html
+++ b/src/app/time-display/time-display.component.html
@@ -6,6 +6,6 @@
 
   <span class="input display-1" role="textbox" contenteditable>{{ mins }}</span>
   <span class="text-small">m:</span>
-  <span class="input display-1" role="textbox" contenteditable>{{ secs }}</span>
+  <span class="input display-1" onsubmit="onSubmit()" role="textbox" contenteditable>{{ secs }}</span>
   <span class="text-small">s</span>
 </div>
